# graphics-engine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  engine.h  main.c
src/gadget_tools/: histogram3d.c  reader.c  reader.h  test_reader.c
src/graphics/: buffer.c  graphics.h  indexbuffer.c  shader.c  texture.c  vertexarray.c  window.c
src/maths/: helper.c  mat4.c  maths.h  vec2.c  vec3.c  vec4.c
src/shaders/: basic.frag  basic.vert  gadget_visualisation.frag  gadget_visualisation.vert
src/tests/: test_helper.c  test_mat4.c  test_vec2.c  test_vec3.c  test_vec4.c
src/utils/: debug.c  debug.h  fileutils.c  fileutils.h
